[gd_scene load_steps=23 format=3 uid="uid://bkhxvwy5g5sy8"]

[ext_resource type="Script" uid="uid://2jcbf6tmc0vk" path="res://handlers/ui_handler.gd" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://cajxbpi4jdr5p" path="res://ui/play_button.gd" id="2_sugp2"]
[ext_resource type="Script" uid="uid://d3ltxwr02g3tp" path="res://ui/main_menu.gd" id="2_tefeu"]
[ext_resource type="FontFile" uid="uid://c3tnx6jece00g" path="res://assets/fonts/BebasKai.otf" id="3_trceg"]
[ext_resource type="Script" uid="uid://hx5gquhfqrh" path="res://handlers/game_handler.gd" id="4_jyhfs"]
[ext_resource type="Script" uid="uid://br26v3ut3btf" path="res://ui/exit_button.gd" id="4_tbgi4"]
[ext_resource type="Script" uid="uid://bnde3arjtnajm" path="res://ui/hud.gd" id="6_jkv2x"]
[ext_resource type="Script" uid="uid://d3xpsei8r7tgi" path="res://ui/health_bar.gd" id="7_jbj1t"]
[ext_resource type="Script" uid="uid://b63scijqlvwg" path="res://gameplay/player/camera.gd" id="7_ya4ey"]
[ext_resource type="Script" uid="uid://iwjpu7uprc1u" path="res://ui/heat_bar.gd" id="8_muem4"]
[ext_resource type="Script" uid="uid://cqj2rjeka77pl" path="res://ui/sting_overlay.gd" id="9_a8y0u"]
[ext_resource type="Script" uid="uid://dg8svd85sb833" path="res://handlers/heat_handler.gd" id="9_jbj1t"]
[ext_resource type="PackedScene" uid="uid://chafxp1mxwqlm" path="res://player/player.tscn" id="12_trceg"]
[ext_resource type="Script" uid="uid://b7816nyh3oiad" path="res://handlers/chunk_handler.gd" id="15_muem4"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_85g3d"]
sky_top_color = Color(0.702953, 0.298296, 0.332004, 1)
sky_horizon_color = Color(0.831865, 0.624935, 0.410068, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_choun"]
sky_material = SubResource("ProceduralSkyMaterial_85g3d")

[sub_resource type="Environment" id="Environment_ya4ey"]
background_mode = 2
sky = SubResource("Sky_choun")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="RichTextEffect" id="RichTextEffect_tbgi4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jbj1t"]
bg_color = Color(0.876864, 0.363632, 0.225339, 1)

[sub_resource type="Animation" id="Animation_a8y0u"]
resource_name = "default"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/HUD/StingOverlay:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.351498, 0.9, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-754, 607), Vector2(169, 299), Vector2(281, 308), Vector2(1206, -156)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/HUD/StingOverlay:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.363214, 0.8, 1.30054),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/HUD/StingOverlay:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.43333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/HUD/StingOverlay:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.351498, 1.03333, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.233276, -0.371661, -0.392222, -0.233276]
}

[sub_resource type="Animation" id="Animation_jkv2x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/HUD/StingOverlay:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(252, 241)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/HUD/StingOverlay:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/HUD/StingOverlay:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/HUD/StingOverlay:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.233276]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jkv2x"]
_data = {
&"RESET": SubResource("Animation_jkv2x"),
&"default": SubResource("Animation_a8y0u")
}

[node name="Main" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ya4ey")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("1_0wfyh")

[node name="MainMenu" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_tefeu")

[node name="ColorRect" type="ColorRect" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.128344, 0.128344, 0.128344, 1)

[node name="Label" type="RichTextLabel" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -504.0
offset_top = 80.0
offset_right = 269.0
offset_bottom = 254.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("3_trceg")
theme_override_font_sizes/normal_font_size = 128
text = "Nak, Tanghali na"
vertical_alignment = 1
custom_effects = [SubResource("RichTextEffect_tbgi4")]
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="PlayButton" type="Button" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -499.0
offset_top = -44.0
offset_right = -243.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/icon_hover_color = Color(0.515867, 0.515867, 0.515867, 1)
theme_override_fonts/font = ExtResource("3_trceg")
theme_override_font_sizes/font_size = 72
text = "play"
flat = true
alignment = 0
script = ExtResource("2_sugp2")

[node name="ExitButton" type="Button" parent="UI/MainMenu"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -498.0
offset_top = 51.0
offset_right = -242.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_trceg")
theme_override_font_sizes/font_size = 72
text = "Quit
"
flat = true
alignment = 0
script = ExtResource("4_tbgi4")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_jkv2x")

[node name="HealthBar" type="ProgressBar" parent="UI/HUD"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 0
offset_left = 907.0
offset_top = 28.0
offset_right = 1107.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 24
theme_override_styles/fill = SubResource("StyleBoxFlat_jbj1t")
value = 50.0
script = ExtResource("7_jbj1t")

[node name="HeatBar" type="ProgressBar" parent="UI/HUD"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 0
offset_left = 240.0
offset_top = 28.0
offset_right = 440.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 24
theme_override_styles/fill = SubResource("StyleBoxFlat_jbj1t")
value = 50.0
script = ExtResource("8_muem4")

[node name="Label" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 32.0
offset_top = 23.0
offset_right = 155.0
offset_bottom = 68.0
theme_override_font_sizes/font_size = 32
text = "HEAT INDEX"

[node name="Label2" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 764.0
offset_top = 23.0
offset_right = 949.0
offset_bottom = 68.0
theme_override_font_sizes/font_size = 32
text = "HEALTH"

[node name="StingOverlay" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 1206.0
offset_top = -156.0
offset_right = 1781.0
offset_bottom = 152.0
rotation = -0.233276
theme_override_colors/font_color = Color(0.935365, 0, 0.127837, 1)
theme_override_fonts/font = ExtResource("3_trceg")
theme_override_font_sizes/font_size = 256
text = "STUNG!"
script = ExtResource("9_a8y0u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/HUD/StingOverlay"]
root_node = NodePath("../../../..")
libraries = {
&"": SubResource("AnimationLibrary_jkv2x")
}

[node name="Handlers" type="Node3D" parent="."]

[node name="Game" type="Node3D" parent="Handlers"]
script = ExtResource("4_jyhfs")

[node name="Heat" type="Node3D" parent="Handlers"]
script = ExtResource("9_jbj1t")
heat_increase = 10.0
max_heat = 100.0

[node name="World" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00172043, 0.0382609, 0.0103979)

[node name="Camera3D" type="Camera3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 0.987373, 0.158416, 0, -0.158416, 0.987373, 0, 2.8382, 2.14677)
script = ExtResource("7_ya4ey")

[node name="Player" parent="World" instance=ExtResource("12_trceg")]

[node name="Obstacles" type="Node3D" parent="World"]

[node name="Chunks" type="Node3D" parent="World"]
script = ExtResource("15_muem4")

[connection signal="game_start_requested" from="UI/MainMenu/PlayButton" to="Handlers/Game" method="_on_play_button_game_start_requested"]
[connection signal="pressed" from="UI/MainMenu/PlayButton" to="UI/MainMenu/PlayButton" method="_on_pressed"]
[connection signal="game_exit_requested" from="UI/MainMenu/ExitButton" to="Handlers/Game" method="_on_exit_button_game_exit_requested"]
[connection signal="pressed" from="UI/MainMenu/ExitButton" to="UI/MainMenu/ExitButton" method="_on_pressed"]
[connection signal="game_ended" from="Handlers/Game" to="UI/MainMenu" method="_on_game_game_ended"]
[connection signal="game_ended" from="Handlers/Game" to="UI/HUD" method="_on_game_game_ended"]
[connection signal="game_ended" from="Handlers/Game" to="UI/HUD/HealthBar" method="_on_game_game_ended"]
[connection signal="game_ended" from="Handlers/Game" to="Handlers/Heat" method="_on_game_game_ended"]
[connection signal="game_started" from="Handlers/Game" to="UI/MainMenu" method="_on_game_game_started"]
[connection signal="game_started" from="Handlers/Game" to="UI/HUD" method="_on_game_game_started"]
[connection signal="game_started" from="Handlers/Game" to="UI/HUD/HeatBar" method="_on_game_game_started"]
[connection signal="game_started" from="Handlers/Game" to="Handlers/Heat" method="_on_game_game_started"]
[connection signal="game_started" from="Handlers/Game" to="World/Camera3D" method="_on_game_game_started"]
[connection signal="game_started" from="Handlers/Game" to="World/Player" method="_on_game_game_started"]
[connection signal="heat_changed" from="Handlers/Heat" to="UI/HUD/HeatBar" method="_on_heat_heat_changed"]
[connection signal="heat_percentage_changed" from="Handlers/Heat" to="UI/HUD/HeatBar" method="_on_heat_heat_percentage_changed"]
[connection signal="cooled" from="World/Player" to="Handlers/Heat" method="_on_player_cooled"]
[connection signal="died" from="World/Player" to="Handlers/Game" method="_on_player_died"]
[connection signal="health_percentage_changed" from="World/Player" to="UI/HUD/HealthBar" method="_on_player_health_percentage_changed"]
[connection signal="just_reset" from="World/Player" to="World/Camera3D" method="_on_player_just_reset"]
[connection signal="picked_up" from="World/Player" to="UI/HUD/StingOverlay" method="_on_player_picked_up"]
